--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ econf = "emake.cli.econf:main"
 [tool.poetry.dependencies]
 python = "^3.10"
 docopt = "^0.6.2"
+tomli = "^2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
