Add ability to set environment variables at configure time
Resolves: https://github.com/jonpalmisc/emake/issues/3

--- a/docs/sample.toml
+++ b/docs/sample.toml
@@ -2,6 +2,9 @@
 args = ["-DFOO=1"]	# Pass `-DFOO=1` to CMake during configuration
 generator = "Ninja"	# Use Ninja as the build generator
 
+[configure.env]
+CC = "gcc-11"		# Set CC='gcc-11' in the environment at configure time
+
 [build]
 jobs = 6		# Always build with 6 parallel jobs
 
